<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_apps"
        android:icon="@drawable/ic_apps"
        android:title="@string/nav_apps" />

    <item
        android:id="@+id/nav_games"
        android:icon="@drawable/ic_games"
        android:title="@string/nav_games" />

    <item
        android:id="@+id/nav_websites"
        android:icon="@drawable/ic_websites"
        android:title="@string/nav_websites" />

    <item
        android:id="@+id/nav_donate"
        android:icon="@drawable/ic_donate"
        android:title="@string/nav_donate" />

    <item
        android:id="@+id/nav_updates"
        android:icon="@drawable/ic_system_update"
        android:title="@string/nav_updates" />

</menu>