<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_apps">

    <fragment
        android:id="@+id/nav_apps"
        android:name="com.minimalistappstore.AppsFragment"
        android:label="@string/nav_apps"
        tools:layout="@layout/fragment_apps" />

    <fragment
        android:id="@+id/nav_games"
        android:name="com.minimalistappstore.GamesFragment"
        android:label="@string/nav_games"
        tools:layout="@layout/fragment_games" />

    <fragment
        android:id="@+id/nav_websites"
        android:name="com.minimalistappstore.WebsitesFragment"
        android:label="@string/nav_websites"
        tools:layout="@layout/fragment_websites" />

    <fragment
        android:id="@+id/nav_donate"
        android:name="com.minimalistappstore.DonateFragment"
        android:label="@string/nav_donate"
        tools:layout="@layout/fragment_donate" />

    <fragment
        android:id="@+id/nav_updates"
        android:name="com.minimalistappstore.UpdatesFragment"
        android:label="@string/nav_updates"
        tools:layout="@layout/fragment_updates" />

</navigation>